--- a/horror.html
+++ b/horror.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Welcome to MovieFlix </title>
+    <title>Welcome to MovieFlix</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -74,7 +74,7 @@
                             <li><a href="#">Movie Extras</a></li>
                             <li class="divider"></li>
                             <li><a href="#">Collections</a></li>
-                            </ul>
+                        </ul>
                     </li>
 
                     <li>
@@ -118,8 +118,8 @@
         <div class="col-md-3" >
             <p class="lead">Movie Genre </p>
             <div class="list-group">
-                <a href="index.html" class="list-group-item active">Action</a>
-                <a href="horror.html" class="list-group-item">Horror</a>
+                <a href="index.html" class="list-group-item ">Action</a>
+                <a href="horror.html" class="list-group-item active">Horror</a>
                 <a href="animation.html" class="list-group-item">Animation</a>
             </div>
         </div>
@@ -136,22 +136,21 @@
 
                     </ol>
 
-
                     <div class="carousel-inner ">
                         <div class="item active ">
-                            <img src="images/image1.jpg" alt="The Unfolding" class="image1" style="height: 500px;">
+                            <img src="images/horror1.jpg" alt="The Unfolding" class="image1" style="height: 500px;">
                         </div>
 
                         <div class="item">
-                            <img src="images/image2.jpg" alt="Insidious3" class="image1" style="height: 500px;">
+                            <img src="images/horror2.jpg" alt="Insidious3" class="image1" style="height: 500px;">
                         </div>
 
                         <div class="item">
-                            <img src="images/image3.jpg" alt="The Movie" class="image1" style="height: 500px;">
+                            <img src="images/horror3.jpg" alt="The Movie" class="image1" style="height: 500px;">
                         </div>
                     </div>
-
                 </div>
+
                 <div class="caption-full">
                     <h4 class="pull-right">$24.99</h4>
                     <h4><a href="#">The Avengers</a>
@@ -278,29 +277,29 @@
         </div>
 
     </div>
-    </div>
-    <!-- /.row -->
+</div>
+<!-- /.row -->
 
 
-    <div class="container">
-        <hr>
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; MovieFlix 2016</p>
-                </div>
+<div class="container">
+    <hr>
+    <!-- Footer -->
+    <footer>
+        <div class="row">
+            <div class="col-lg-12">
+                <p>Copyright &copy; MovieFlix 2016</p>
             </div>
-        </footer>
+        </div>
+    </footer>
 
-    </div>
-    <!-- /.container -->
+</div>
+<!-- /.container -->
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+<!-- jQuery -->
+<script src="js/jquery.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
 
 </body>
 
